--- a/will-you-be-my-valentine-main/index.html
+++ b/will-you-be-my-valentine-main/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <script type="module" src="/src/main.tsx"></script>
+        <script type="module" src="/will-you-be-my-valentine-main/src/main.tsx"></script>
     </body>
 </html>
